# autonomy-engine

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
backend/: main.py
backend/agents/: __init__.py  factory.py
backend/agents/planning/: planner.py  planning_agent.py
backend/app/api/: application.py  router.py
backend/app/config/: __init__.py  base.py  constants.py  environment.py  paths.py  settings.py
backend/app/container/: agent_factory.py  agents.py  container.py  decorators.py  exceptions.py  lifetime.py  provider.py  registration.py  resolver.py  runtime_services.py  scopes.py  service_locator.py  wiring.py
backend/core/agents/: agent.py  capabilities.py  context.py  events.py  exceptions.py  goal.py  manager.py  memory.py  plan.py  planner.py  registry.py  result.py  state.py
backend/core/config/: __init__.py  browser.py  config.py  filesystem.py  llm.py  loader.py  runtime.py  security.py
backend/core/kernel/: __init__.py  application.py  bootstrap.py  dependency_graph.py  exceptions.py  health.py  metadata.py  registry.py  runtime.py  runtime_context.py  runtime_info.py  runtime_state.py  service.py
backend/core/observability/: __init__.py  container.py  events.py  execution_trace.py  logger.py  trace_span.py  tracing.py
backend/core/runtime/: coordinator.py  default_middleware.py  dispatcher.py  execution_engine.py  execution_pipeline.py  execution_request.py  execution_result.py  (+8 more)
backend/shared/: enums.py  types.py
backend/tools/: __init__.py  factory.py
tests/runtime/: test_runtime_boot.py
(+72 files in other folders)
