[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-ai-framework"
version = "0.1.0"
description = "Production-grade autonomous multi-agent AI automation framework."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Envisio" }
]

keywords = [
    "langgraph",
    "ai",
    "automation",
    "playwright",
    "computer-use",
    "multi-agent"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
    ".",
]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.coverage.run]
branch = true

